search service tests 100%