@@ -7,6 +7,7 @@ import com.turkcell.turkcellcrm.searchService.business.dto.dynamics.DynamicFilte
 import com.turkcell.turkcellcrm.searchService.business.dto.dynamics.DynamicQuery;
 import com.turkcell.turkcellcrm.searchService.business.dto.dynamics.DynamicSort;
 import com.turkcell.turkcellcrm.searchService.business.dto.response.GetAllCustomerResponse;
+import com.turkcell.turkcellcrm.searchService.business.dto.response.GetAllProductResponse;
 import com.turkcell.turkcellcrm.searchService.business.rules.CustomerFilterBusinessRules;
 import com.turkcell.turkcellcrm.searchService.core.utilities.mapping.ModelMapperService;
 import com.turkcell.turkcellcrm.searchService.dataAccess.SearchCustomerRepository;
@@ -18,13 +19,15 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class SearchCustomerManagerTest {
@@ -43,69 +46,55 @@ class SearchCustomerManagerTest {
 
     @Test
     void testAdd() {
-        CustomerCreatedEvent customerCreatedEvent = new CustomerCreatedEvent();
-        customerCreatedEvent.setCustomerId(111);
-        customerCreatedEvent.setFirstName("John");
 
+        CustomerCreatedEvent customerCreatedEvent = new CustomerCreatedEvent();
         Customer customer = new Customer();
-        customer.setCustomerId(111);
-        customer.setFirstName("John");
 
         when(modelMapperService.forRequest()).thenReturn(modelMapper);
         when(modelMapper.map(customerCreatedEvent,Customer.class)).thenReturn(customer);
 
         searchCustomerManager.add(customerCreatedEvent);
+
         verify(modelMapperService.forRequest()).map(customerCreatedEvent,Customer.class);
         verify(searchCustomerRepository).save(customer);
         assertDoesNotThrow(()->searchCustomerManager.add(customerCreatedEvent));
-
     }
 
     @Test
     void testGetAll() {
+
         List<DynamicFilter> filters = Collections.emptyList();
         List<DynamicSort> sorts = Collections.emptyList();
         DynamicQuery dynamicQuery = new DynamicQuery(filters, sorts);
 
-        // Prepare the expected response
-        GetAllCustomerResponse response = new GetAllCustomerResponse();
-        response.setCustomerId(111);
-        response.setFirstName("test");
+        GetAllCustomerResponse response1 = new GetAllCustomerResponse();
+        GetAllCustomerResponse response2 = new GetAllCustomerResponse();
 
-        // Prepare the mock customer data
-        Customer customer = new Customer();
-        customer.setCustomerId(111);
-        customer.setFirstName("test");
+        Customer customer1 = new Customer();
+        Customer customer2 = new Customer();
 
-        // Mocking the service and model mapper
-        List<Customer> customerList = List.of(customer);
+        List<Customer> customerList = Arrays.asList(customer1, customer2);
+
         when(searchService.dynamicSearch(dynamicQuery, Customer.class)).thenReturn(customerList);
         when(modelMapperService.forResponse()).thenReturn(modelMapper);
-        when(modelMapper.map(customer, GetAllCustomerResponse.class)).thenReturn(response);
+        when(modelMapper.map(customer1, GetAllCustomerResponse.class)).thenReturn(response1);
+        when(modelMapper.map(customer2, GetAllCustomerResponse.class)).thenReturn(response2);
 
-        // Execute the method
         List<GetAllCustomerResponse> responses = searchCustomerManager.getAll(dynamicQuery);
 
-        // Verify the interactions
+        assertEquals(2, responses.size());
+        assertTrue(responses.contains(response1));
+        assertTrue(responses.contains(response2));
+
         verify(searchService).dynamicSearch(dynamicQuery, Customer.class);
-        verify(modelMapper).map(customer, GetAllCustomerResponse.class);
-
-        // Validate the result
-        assertDoesNotThrow(() -> searchCustomerManager.getAll(dynamicQuery));
-        assertEquals(1, responses.size());
-        assertEquals(response, responses.get(0));
-
+        verify(modelMapperService.forResponse(), times(2)).map(any(), eq(GetAllCustomerResponse.class));
     }
 
     @Test
     void testUpdate() {
-        CustomerUpdatedEvent customerUpdatedEvent = new CustomerUpdatedEvent();
-        customerUpdatedEvent.setFirstName("sampleFirstName");
-        customerUpdatedEvent.setLastName("sampleLastName");
 
+        CustomerUpdatedEvent customerUpdatedEvent = new CustomerUpdatedEvent();
         Customer customer = new Customer();
-        customer.setFirstName("sampleFirstName");
-        customer.setLastName("sampleLastName");
 
         when(modelMapperService.forRequest()).thenReturn(modelMapper);
         when(modelMapper.map(customerUpdatedEvent,Customer.class)).thenReturn(customer);
@@ -114,17 +103,21 @@ class SearchCustomerManagerTest {
 
         verify(modelMapperService.forRequest()).map(customerUpdatedEvent,Customer.class);
         verify(searchCustomerRepository).save(customer);
+
         assertDoesNotThrow(()->searchCustomerManager.update(customerUpdatedEvent));
     }
 
     @Test
     void testDeleteCustomer() {
+
         int customerId = 111;
         Customer customer = new Customer();
+
         when(customerFilterBusinessRules.IsCustomerAlreadyDeleted(customerId)).thenReturn(customer);
+
         searchCustomerManager.deleteCustomer(111);
+
         verify(customerFilterBusinessRules).IsCustomerAlreadyDeleted(customerId);
         verify(searchCustomerRepository).save(customer);
-
     }
 }
